syntax = "proto3";
package comdex.loan.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "comdex/loan/v1beta1/params.proto";
import "comdex/loan/v1beta1/loan.proto";

option go_package = "github.com/comdex-official/comdex/x/loan/types";

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex-official/comdex/loan/params";
  }
  rpc QueryLoan(QueryLoanRequest) returns (QueryLoanResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/loans/{id}";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryLoanRequest {
  uint64 id = 1;
}

message QueryLoanResponse {
  Loan loan = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"loan\""];
}